--- a/consumer-order80/src/main/resources/application.yml
+++ b/consumer-order80/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 eureka:
   client:
     #表示是否将自己注册进EurekaServer默认为true（服务的消费者可以不注册，这里可以改为false）。
-    register-with-eureka: true
+    register-with-eureka: false
     #是否从EurekaServer抓取已有的注册信息（获取已注册的服务），默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetchRegistry: true
     service-url:
