--- a/provider-payment8001/src/main/resources/application.yml
+++ b/provider-payment8001/src/main/resources/application.yml
@@ -13,16 +13,20 @@ spring:
 
 eureka:
   client:
-    #表示是否将自己注册进EurekaServer默认为true（注册服务）。
+    #当前服务是否在eureka注册中心中注册（注册服务）。
     register-with-eureka: true
-    #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
+    #是否从EurekaServer抓取已有的注册信息（注册列表），默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetchRegistry: true
+    #注册中心地址
     service-url:
+      #将当前服务，在单机的eureka注册中心中注册
       defaultZone: http://localhost:7001/eureka
-      #将payment服务在eureka集群中注册
+      #将当前服务，在eureka注册中心集群中注册
       #defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
   instance:
+    #实例名（如果一个服务搭建了集群，这个集群中每个服务就是一个实例）
     instance-id: payment8001
+    #点击实例名，是否该实例的地址
     prefer-ip-address: true
     #心跳检测与续约时间
     #开发时没置小些，保证服务关闭后注册中心能即使剔除服务
